--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src="auborddujour.jpg">
+    <img style^="text-algin:center;" src="auborddujour.jpg">
 </body>
 
-</html>auborddujour.jpg
+</html>
