--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
 <head>
     <meta charset="utf-8">
     <title>Au Bord du Jour - Librarie</title>
+    <style>
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
-    <img style^="text-algin:center;" src="auborddujour.jpg">
+    <img class="center" src="auborddujour.jpg">
 </body>
 
 </html>
